--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -1,27 +1,27 @@
 {% load custom_tags %}
 
 <script>
-function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_timeout;function ajax_read_logs(){!function e(){poll_timeout=setTimeout(function(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-read-logs' %}",data:{job:$("#ymlBasedJobIdentifier").val(),params:$("#ymlBasedJobParams").val(),PACKAGE_NAME:$("#pkgName").val(),BUILD_SYSTEM:$("#buildSystem").val()?$("#buildSystem").val().split("-",2)[1]:$("#buildSystem").val(),BUILD_TAG:$("#buildTag").val(),RELEASE_SLUG:$("#releaseName").val(),REPO_TYPE:$("#repoType").val(),REPO_BRANCH:$("#repoBranch").val()},success:function(e){e&&$("#div-job-output").html(e).scrollDown()},complete:e})},2e3)}()}function ajax_yml_jobs(){dryRun="",$("#chkDryRun").is(":checked")&&(dryRun=$("#chkDryRun").val()),scratch="",$("#chkScratch").is(":checked")&&(scratch=$("#chkScratch").val()),$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),ajax_read_logs(),$("#job-result").html(""),$("#div-reset-button").html(""),$("#span-job-progress").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-schedule-job' %}",data:{job:$("#ymlBasedJobIdentifier").val(),params:$("#ymlBasedJobParams").val(),YML_FILE:$("#YMLfile").val(),PACKAGE_NAME:$("#pkgName").val(),BUILD_SYSTEM:$("#buildSystem").val()?$("#buildSystem").val().split("-",2)[1]:$("#buildSystem").val(),BUILD_TAG:$("#buildTag").val(),RELEASE_SLUG:$("#releaseName").val(),REPO_TYPE:$("#repoType").val(),REPO_BRANCH:$("#repoBranch").val(),DRY_RUN:dryRun,SCRATCH:scratch},success:function(e){clearTimeout(poll_timeout),$("#job-result").html(e),$("#span-job-progress").html("<span class='glyphicon glyphicon-ok-sign' style='color:green'></span>"),$("#div-reset-button").html("<a href='/jobs/yml-based' class='btn btn-default pull-right' type='button'>Reset</a>")},error:function(e,t,a){clearTimeout(poll_timeout),$("#job-result").html(e.responseText),$("#span-job-progress").html("<span class='glyphicon glyphicon-remove' style='color:red'></span>"),$("#div-reset-button").html("<a href='/jobs/yml-based' class='btn btn-default pull-right' type='button'>Reset</a>")}})}function ajax_build_tags(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#div-build-tags").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-build-tags' %}",data:{buildsys:$("#buildSystem").val()},success:function(e){e&&$("#div-build-tags").html(e)}})}function ajax_repo_branches(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#div-repo-branches").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-repo-branches' %}",data:{package:$("#pkgName").val(),repoType:$("#repoType").val()},success:function(e){e&&$("#div-repo-branches").html(e)}})}$.fn.scrollDown=function(){$(this).animate({scrollTop:$(this)[0].scrollHeight},2e3)},getUrlVars().package&&$("#pkgName").val(getUrlVars().package),getUrlVars().buildsys&&$("#buildSystem").val(getUrlVars().buildsys),getUrlVars().tag&&$("#buildTag").val(getUrlVars().tag);var e=$("div.setup-panel div a"),t=$(".setup-content"),a=$(".nextBtn"),s=$(".prevBtn");t.hide(),e.click(function(a){a.preventDefault();var s=$($(this).attr("href")),r=$(this);r.hasClass("disabled")||(e.removeClass("btn-primary").addClass("btn-default"),r.addClass("btn-primary"),t.hide(),s.show(),s.find("input:eq(0)").focus())}),s.click(function(){var e=$(this).closest(".setup-content").attr("id");$('div.setup-panel div a[href="#'+e+'"]').parent().prev().children("a").removeAttr("disabled").trigger("click")}),a.click(function(){var e=$(this).closest(".setup-content"),t=e.attr("id"),a=$('div.setup-panel div a[href="#'+t+'"]').parent().next().children("a"),s=e.find("input[type='text'],input[type='url']"),r=!0;$(".form-group").removeClass("has-error");for(var n=0;n<s.length;n++)s[n].validity.valid||(r=!1,$(s[n]).closest(".form-group").addClass("has-error"));r&&a.removeAttr("disabled").trigger("click")}),$("div.setup-panel div a.btn-primary").trigger("click"),$(function(){$(".dropdown-menu a").click(function(){console.log($(this).attr("data-value")),$(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))})}),$("#fireJobLink").click(function(e){return e.preventDefault(),ajax_yml_jobs(),!1}),$("#buildSystem").change(function(e){return e.preventDefault(),ajax_build_tags(),!1}),$("#repoType").change(function(e){return e.preventDefault(),ajax_repo_branches(),!1}),$("#pkgName").click(function(){$(this).val("")}),$("#buildTag").click(function(){$(this).val("")}),$(".selectpicker").selectpicker();
+function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_timeout;function ajax_read_logs(){!function e(){poll_timeout=setTimeout(function(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-read-logs' %}",data:{job:$("#ymlBasedJobIdentifier").val(),params:$("#ymlBasedJobParams").val(),PACKAGE_NAME:$("#pkgName").val(),BUILD_SYSTEM:$("#buildSystem").val()?$("#buildSystem").val().split("-",2)[1]:$("#buildSystem").val(),BUILD_TAG:$("#buildTag").val(),RELEASE_SLUG:$("#releaseName").val(),REPO_TYPE:$("#repoType").val(),REPO_BRANCH:$("#repoBranch").val()},success:function(e){e&&$("#div-job-output").html(e).scrollDown()},complete:e})},2e3)}()}function ajax_yml_jobs(){var e=new Array;$(".form-check-input").each(function(){$(this).is(":checked")&&e.push($(this).val())}),dryRun="",$("#chkDryRun").is(":checked")&&(dryRun=$("#chkDryRun").val()),scratch="",$("#chkScratch").is(":checked")&&(scratch=$("#chkScratch").val()),$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),ajax_read_logs(),$("#job-result").html(""),$("#div-reset-button").html(""),$("#span-job-progress").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-schedule-job' %}",data:{job:$("#ymlBasedJobIdentifier").val(),params:$("#ymlBasedJobParams").val(),YML_FILE:$("#YMLfile").val(),PACKAGE_NAME:$("#pkgName").val(),BUILD_SYSTEM:$("#buildSystem").val()?$("#buildSystem").val().split("-",2)[1]:$("#buildSystem").val(),BUILD_TAG:$("#buildTag").val(),RELEASE_SLUG:$("#releaseName").val(),REPO_TYPE:$("#repoType").val(),REPO_BRANCH:$("#repoBranch").val(),PIPELINE_UUID:$("#ciPipeline").val(),TARGET_LANGS:e.toString(),DRY_RUN:dryRun,SCRATCH:scratch},success:function(e){clearTimeout(poll_timeout),$("#job-result").html(e),$("#span-job-progress").html("<span class='glyphicon glyphicon-ok-sign' style='color:green'></span>"),$("#div-reset-button").html("<a href='/jobs/yml-based' class='btn btn-default pull-right' type='button'>Reset</a>")},error:function(e,t,a){clearTimeout(poll_timeout),$("#job-result").html(e.responseText),$("#span-job-progress").html("<span class='glyphicon glyphicon-remove' style='color:red'></span>"),$("#div-reset-button").html("<a href='/jobs/yml-based' class='btn btn-default pull-right' type='button'>Reset</a>")}})}function ajax_build_tags(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#div-build-tags").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-build-tags' %}",data:{buildsys:$("#buildSystem").val()},success:function(e){e&&$("#div-build-tags").html(e)}})}function ajax_repo_branches(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#div-repo-branches").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-repo-branches' %}",data:{package:$("#pkgName").val(),repoType:$("#repoType").val()},success:function(e){e&&$("#div-repo-branches").html(e)}})}function ajax_target_langs(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#div-target-langs").html("<span class='spinner spinner-sm spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-target-langs' %}",data:{ci_pipeline:$("#ciPipeline").val()},success:function(e){e&&$("#div-target-langs").html(e)}})}$.fn.scrollDown=function(){$(this).animate({scrollTop:$(this)[0].scrollHeight},2e3)},getUrlVars().package&&$("#pkgName").val(getUrlVars().package),getUrlVars().buildsys&&$("#buildSystem").val(getUrlVars().buildsys),getUrlVars().tag&&$("#buildTag").val(getUrlVars().tag);var e=$("div.setup-panel div a"),t=$(".setup-content"),a=$(".nextBtn"),s=$(".prevBtn");t.hide(),e.click(function(a){a.preventDefault();var s=$($(this).attr("href")),a=$(this);a.hasClass("disabled")||(e.removeClass("btn-primary").addClass("btn-default"),a.addClass("btn-primary"),t.hide(),s.show(),s.find("input:eq(0)").focus())}),s.click(function(){var e=$(this).closest(".setup-content").attr("id");$('div.setup-panel div a[href="#'+e+'"]').parent().prev().children("a").removeAttr("disabled").trigger("click")}),a.click(function(){var e=$(this).closest(".setup-content"),t=e.attr("id"),t=$('div.setup-panel div a[href="#'+t+'"]').parent().next().children("a"),a=e.find("input[type='text'],input[type='url']"),s=!0;$(".form-group").removeClass("has-error");for(var n=0;n<a.length;n++)a[n].validity.valid||(s=!1,$(a[n]).closest(".form-group").addClass("has-error"));s&&t.removeAttr("disabled").trigger("click")}),$("div.setup-panel div a.btn-primary").trigger("click"),$(function(){$(".dropdown-menu a").click(function(){console.log($(this).attr("data-value")),$(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))})}),$("#fireJobLink").click(function(e){return e.preventDefault(),ajax_yml_jobs(),!1}),$("#buildSystem").change(function(e){return e.preventDefault(),ajax_build_tags(),!1}),$("#repoType").change(function(e){return e.preventDefault(),ajax_repo_branches(),!1}),$("#ciPipeline").change(function(e){return e.preventDefault(),ajax_target_langs(),!1}),$("#pkgName").click(function(){$(this).val("")}),$("#buildTag").click(function(){$(this).val("")}),$(".selectpicker").selectpicker();
 </script>
 
 <form role="form" action="" method="post">
-    <div class="row setup-content" id="step-1" style="min-height: 550px;">
-      <div class="col-xs-12 {% if job_template %}col-md-offset-3{% else %}col-md-offset-1{% endif %}">
+    <div class="row setup-content" id="step-1">
+      <div class="{% if job_template %}col-md-offset-3{% else %}col-md-offset-1{% endif %}">
           <div class="form-group">
             {% if job_templates %}
               {% for template in job_templates %}
-              <div class="col-xs-12 col-md-3">
-                <div class="thumbnail">
+              <div class="col-xs-4">
+                <div class="thumbnail" style="max-width:400px">
                   <div class="caption" style="min-height:250px">
-                    <h3><span class="pficon pficon-template"></span>
+                    <div class="panel-title">
                         {{ template.job_template_name|capfirst }}
-                        {% if template.job_template_json %}
-                            <small class="pull-right"> YML</small>
-                        {% endif %}
-                    </h3>
-                    <p class="text-info text-faq-ans">{{ template.job_template_desc }}</p>
+                        <span class="pficon pficon-template pull-right"></span>
+                    </div>
+                    <div class="text-info text-faq-ans" style="padding-top:5%">
+                        {{ template.job_template_desc }}
+                    </div>
                     {% if template.job_template_params %}
-                      <div class="text-faq-ans">Required Values:</div>
+                      <div class="text-faq-ans" style="padding-top:5%">Required Values:</div>
                         <ul>
                             {% for param in template.job_template_params %}
                                 <li>{{ param }}</li>
@@ -47,7 +47,6 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
     </div>
     <div class="row setup-content" id="step-2" style="min-height: 550px;">
       <div class="col-xs-4 col-md-offset-4">
-        <div class="col-md-12">
           <div class="form-group">
               <label for="YMLfile">YML File</label>
               <textarea class="form-control" rows="20" id="YMLfile" required="required">
@@ -60,7 +59,6 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
                   Build System.</small>
           </span>
         </div>
-      </div>
     </div>
     <div class="row setup-content" id="step-3" style="min-height: 550px;">
       <div class="col-xs-6 col-md-offset-3">
@@ -72,7 +70,7 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
                 <input id="pkgName" type="text" class="form-control options dropdown-toggle" placeholder="Select Package">
                 <ul class="dropdown-menu scrollable-menu">
                     {% for package_name, upstream_name in packages %}
-                        <li><a href="#" data-value="{{ package_name }}">{{ upstream_name }}</a></li>
+                        <li><a data-value="{{ package_name }}">{{ upstream_name }}</a></li>
                     {% endfor %}
                 </ul>
                 <span role="button" class="input-group-addon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></span>
@@ -103,7 +101,7 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
                 <input id="releaseName" type="text" class="form-control options dropdown-toggle" placeholder="Select Release">
                 <ul class="dropdown-menu scrollable-menu">
                     {% for release_slug, release_name in releases %}
-                        <li><a href="#" data-value="{{ release_slug }}">{{ release_name }}</a></li>
+                        <li><a data-value="{{ release_slug }}">{{ release_name }}</a></li>
                     {% endfor %}
                 </ul>
                 <span role="button" class="input-group-addon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></span>
@@ -126,8 +124,30 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
                     <br/><p>No products (release stream) configured.</p>
                 {% endif %}
             </div>
-            <div id="div-build-tags">
+            <div class="form-group" id="div-build-tags">
                 {% tag_build_tags 'dummy' 'dummy' %}
+            </div>
+          </div>
+          {% endif %}
+          {% if 'pipeline_uuid' in job_params %}
+          <div class="form-group">
+            <label class="control-label">Pipeline and Target Languages</label>
+            <div style="padding-bottom:10px">
+                {% if ci_pipelines %}
+                <select id="ciPipeline" class="selectpicker">
+                    <option selected disabled>Select CI Pipeline</option>
+                    {% for ci_pipeline in ci_pipelines %}
+                        <option value="{{ ci_pipeline.ci_pipeline_uuid }}">
+                            {{ ci_pipeline.ci_project_details_json|get_item:"name" }}
+                        </option>
+                    {% endfor %}
+                </select>
+                {% else %}
+                    <br/><p>No CI pipelines created.</p>
+                {% endif %}
+            </div>
+            <div class="form-group" id="div-target-langs">
+                {% tag_target_langs '' %}
             </div>
           </div>
           {% endif %}
@@ -142,7 +162,7 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
           <button class="btn btn-default prevBtn pull-left" type="button">Previous</button>
           <span style="padding-left:10px">
             <label class="checkbox-inline"><input id="chkDryRun" type="checkbox" value="NoSave" checked> Dry Run
-                <small>(<i>Derived statistics will not be saved.</i>)</small></label>
+                <small>(<i>Derived details will not be saved.</i>)</small></label>
             <label class="checkbox-inline"><input id="chkScratch" type="checkbox" value="ScratchRun">Scratch
                 <small>(<i>Job will not be logged.</i>)</small></label>
           </span>
